Added Pathways AFL Best is 71.36% at H= {L=1, N=5}

--- a/ArtificialNeuralNetwork.csproj
+++ b/ArtificialNeuralNetwork.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Data.cs" />
     <Compile Include="Dendrite.cs" />
     <Compile Include="Dynamic.cs" />
+    <Compile Include="NeuralPathway.cs" />
     <Compile Include="Optimizer.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Network.cs" />
